test/resources/parser/failing/IntError3.grading.amy
object IntError 
  def foo(): Int(true) := 42 end foo
end IntError